# type-indexed

./: .gitignore  LICENSE  README.md  package.yaml  type-indexed.cabal
src/: Lib.hs
src/Data/Proxy/: QQ.dyn_hi  QQ.dyn_o  QQ.hi
src/Data/TypeIndexed/: HeteroMap.hs  HomoMap.hs  QQ.hs
src/Data/TypeIndexed/HeteroMap/: Internal.hs
src/Data/TypeIndexed/HomoMap/: Internal.hs
test/: bench.hs  hlint.hs  unit.hs
test/Test/Data/TypeIndexed/: HeteroMap.hs
test/Tests/: Lib.hs
