name:                type-indexed
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/xkollar/type-indexed#readme
license:             BSD3
license-file:        LICENSE
author:              Matej Kollar
maintainer:          208115@mail.muni.cz
copyright:           2017 Matej Kollar
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs: src
  exposed-modules:
    Data.TypeIndexed.HeteroMap
    Data.TypeIndexed.HeteroMap.Internal
    Data.TypeIndexed.HomoMap
    Data.TypeIndexed.HomoMap.Internal
  build-depends:       base >= 4.7 && < 5
                     , containers
  default-language:    Haskell2010
  default-extensions:  NoImplicitPrelude
  ghc-options:
    -Wall
    -fwarn-tabs
    -fwarn-missing-import-lists
    -fwarn-implicit-prelude
    -Wsemigroup

test-suite unit
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             unit.hs
  other-modules:       Test.Data.TypeIndexed.HeteroMap
  build-depends:
      base
    , type-indexed
    -- TEST related
    , template-haskell
    , tasty
    , tasty-hunit
    -- , tasty-quickcheck
  ghc-options:
    -Wall
    -fwarn-tabs
    -threaded
    -rtsopts
    "-with-rtsopts=-N -K1K"
  default-language: Haskell2010

test-suite hlint
  type: exitcode-stdio-1.0
  main-is: hlint.hs
  hs-source-dirs: test
  ghc-options: -Wall -fwarn-tabs -fwarn-missing-import-lists -fwarn-implicit-prelude -threaded "-with-rtsopts=-N -K1K"
  build-depends:
      base >=4.7 && <5
    , hlint
  default-language: Haskell2010

benchmark benchmarks
  type:             exitcode-stdio-1.0
  hs-source-dirs:   test
  main-is:          bench.hs
  other-modules:
    -- Bench.Data.TypeIndexed.Map
    -- Bench.Data.TypeIndexed.HeteroMap
    -- Tools
  build-depends:
      base
    , type-indexed

    , containers
    , dimensional
    , template-haskell
    -- BENCHMARK related
    , criterion
  ghc-options:
    -Wall
    -fwarn-tabs
    -rtsopts "-with-rtsopts=-K1K"
    -O2
  default-language: Haskell2010
